@@ -1,3 +1,4 @@
 Data block 'empty' does not have partially occupied ordered atoms.
 Data block 'with_partials' has partially occupied ordered atoms.
 Data block 'without_occupancies' does not have partially occupied ordered atoms.
+Data block 'without_occupancies_with_su' has partially occupied ordered atoms.
