@@ -52,6 +52,9 @@ cod-tools (unreleased)
     - COD::CIF::Data::CIF2COD:
       - values 'inf', 'infinity' and 'nan' (and their capitalized
         variants) are no longer treated as numeric.
+    - COD::CIF::Data::CODFlags:
+      - has_partially_occupied_ordered_atoms() now unpacks CIF numbers
+        before doing numerical comparisons with them.
     - COD::CIF::Unicode2CIF:
       - removed the unofficial CIF special codes for letters 'ů' and 'Ů'
         ('\"u', '\"U');
